Add example. Update Readme content  move to swaggo.io.
